Implement BlockDevice class and query info from the /sys/block and /sys/class/block fs(s)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,6 +62,9 @@
         "mutex": "cpp",
         "semaphore": "cpp",
         "stop_token": "cpp",
-        "thread": "cpp"
+        "thread": "cpp",
+        "codecvt": "cpp",
+        "fstream": "cpp",
+        "iomanip": "cpp"
     }
 }
