--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,5 @@ file(GLOB_RECURSE SOURCES src/*.cpp)
 file(GLOB_RECURSE HEADERS src/*.hpp)
 
 add_executable(BlockDeviceMonitor ${SOURCES} ${HEADERS})
+
+set_property(TARGET BlockDeviceMonitor PROPERTY CXX_STANDARD 20)
