update protobuf related environment settings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,8 @@ cmake_minimum_required(VERSION 3.5.0)
 project(BlockDeviceMonitor VERSION 0.1.0 LANGUAGES C CXX)
 find_package(Protobuf REQUIRED)
 
-file(GLOB_RECURSE SOURCES src/*.cpp)
-file(GLOB_RECURSE HEADERS src/*.hpp)
+file(GLOB_RECURSE SOURCES src/*.cpp src/proto/*.pb.cc)
+file(GLOB_RECURSE HEADERS src/*.hpp src/proto/*.pb.h)
 
 add_executable(BlockDeviceMonitor ${SOURCES} ${HEADERS})
 set_property(TARGET BlockDeviceMonitor PROPERTY CXX_STANDARD 20)
