--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,9 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${command:cmake.launchTargetPath}",
-            "args": [],
+            "args": [
+                "8080"
+            ],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
             "environment": [],
