implement rules matching logic

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,6 +68,8 @@
         "iomanip": "cpp",
         "set": "cpp",
         "unordered_set": "cpp",
-        "*.inc": "cpp"
+        "*.inc": "cpp",
+        "bitset": "cpp",
+        "regex": "cpp"
     }
 }
