--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.5.0)
 project(BlockDeviceMonitor VERSION 0.1.0 LANGUAGES C CXX)
+set(BUILD_SHARED_LIBS OFF)
+
 find_package(Protobuf REQUIRED)
 find_library(BLKID_LIB blkid REQUIRED)
 
@@ -8,7 +10,7 @@ file(GLOB_RECURSE HEADERS src/*.hpp src/proto/*.pb.h)
 
 add_executable(BlockDeviceMonitor ${SOURCES} ${HEADERS})
 set_property(TARGET BlockDeviceMonitor PROPERTY CXX_STANDARD 20)
-target_include_directories(BlockDeviceMonitor PUBLIC ${Protobuf_INCLUDE_DIRS})
+target_include_directories(BlockDeviceMonitor PRIVATE ${Protobuf_INCLUDE_DIRS})
 target_link_libraries(BlockDeviceMonitor ${Protobuf_LIBRARIES})
-target_include_directories(BlockDeviceMonitor PUBLIC ${BLKID_INCLUDE_DIRS})
+target_include_directories(BlockDeviceMonitor PRIVATE ${BLKID_INCLUDE_DIRS})
 target_link_libraries(BlockDeviceMonitor ${BLKID_LIB})
