forward results_path through program argument instead of constexpr

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,6 +10,7 @@
             "request": "launch",
             "program": "${command:cmake.launchTargetPath}",
             "args": [
+                "results",
                 "8080"
             ],
             "stopAtEntry": false,
